<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".mainRefereeInterfacePage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:textSize="16sp"
                android:id="@+id/ladderButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="100dp"
                android:padding="30dp"
                android:onClick="ladderButton"
                android:layout_marginEnd="80dp"
                android:text="@string/ladderButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:textSize="16sp"
                android:id="@+id/classificationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:layout_marginEnd="80dp"
                android:text="@string/classificationButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:textSize="16sp"
                android:id="@+id/setMatchButton"
                android:layout_width="match_parent"
                android:onClick="setMatchButton"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:layout_marginEnd="80dp"
                android:text="@string/setMatchButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:textSize="16sp"
                android:id="@+id/addPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:onClick="addPlayerButton"
                android:padding="30dp"
                android:layout_marginEnd="80dp"
                android:text="@string/addPlayerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:textSize="16sp"
                android:id="@+id/searchPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:onClick="searchPlayerButton"
                android:layout_marginEnd="80dp"
                android:text="@string/searchPlayerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:textSize="16sp"
                android:id="@+id/addPlayerToTournamentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:layout_marginEnd="80dp"
                android:text="@string/addPlayerToTournamentButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:textSize="16sp"
                android:id="@+id/sortTableButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:onClick="sortTableButton"
                android:padding="30dp"
                android:layout_marginEnd="80dp"
                android:text="@string/sortTableButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:textSize="16sp"
                android:id="@+id/sortTableTournamentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:onClick="sortTableTournamentButton"
                android:padding="30dp"
                android:layout_marginEnd="80dp"
                android:text="@string/sortTableTournamentButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:textSize="16sp"
                android:id="@+id/spacePlayersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:onClick="spacePlayerButton"
                android:layout_marginEnd="80dp"
                android:text="@string/spacePlayersButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:textSize="16sp"
                android:id="@+id/randomPlayersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:onClick="randomPlayerButton"
                android:layout_marginEnd="80dp"
                android:text="@string/randomPlayersButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:textSize="16sp"
                android:id="@+id/createLadderButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:layout_marginEnd="80dp"
                android:text="@string/createLadderButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:textSize="16sp"
                android:id="@+id/restartTournamentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:layout_marginEnd="80dp"
                android:text="@string/restartTournament"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="100dp"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>