<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".sortTableInTournamentPage">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sortTournamentNameText"
                    android:layout_width="180dp"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/addName"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/sortTournamentSex"
                    app:layout_constraintEnd_toStartOf="@+id/sortTournamentSurnameText"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/sortTournamentSurnameText"
                    android:layout_width="180dp"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/addSurname"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sortTournamentClub"
                    android:layout_width="180dp"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/sortTournamentClub"
                    android:textSize="16sp" />


                <Button
                    android:id="@+id/sortTournamentPoint"
                    android:layout_width="180dp"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/sortTournamentPoints"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sortTournamentNr"
                    android:layout_width="180dp"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/sortTournamentNr"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/sortTournamentPlace"
                    android:layout_width="180dp"
                    android:layout_height="65dp"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/sortTorunamentPlace"
                    android:textSize="16sp" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sortTournamentTextInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp"
                    android:layout_marginBottom="80dp"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sortTournamentCategory" />
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>