<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".addPlayerToTournamentPage">


    <EditText
        android:id="@+id/addPlayerToTournamentNameText"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addPlayerToTournamentDate"
        app:layout_constraintEnd_toStartOf="@+id/addPlayerToTournamentSurnameText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addPlayerToTournamentSurnameText"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addSurname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addPlayerToTournamentDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addPlayerToTournamentNameText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/addPlayerToTournamentDate"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="512dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addDate"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPlayerToTournamentSurnameText"
        tools:ignore="MissingConstraints,TextFields" />

    <Button
        android:id="@+id/addPlayerToTournamentPlayerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="80dp"
        android:padding="30dp"
        android:text="@string/addPlayerToTournamentingPlayerButton"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>